--- a/package.json
+++ b/package.json
@@ -7,10 +7,22 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start:dev": "yarn run build:dev",
-    "build:dev": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql",
+    "dev": "nodemon",
     "build": "tsc -p ./",
     "lint": "eslint . --ext .ts"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "**/*.test.ts",
+      "**/*.spec.ts",
+      ".git",
+      "node_modules"
+    ],
+    "watch": [
+      "src"
+    ],
+    "exec": "node -r tsconfig-paths/register -r ts-node/register ./src/server.ts",
+    "ext": "ts, js"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
@@ -31,6 +43,7 @@
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.3",
     "ts-node": "^9.0.0",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.5"
   },
   "dependencies": {
