--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "join-monster": "^2.1.2",
     "pg-promise": "^10.7.1",
     "sqlstring": "^2.3.2",
+    "ts-transformer-keys": "^0.4.2",
     "xml2js": "^0.4.23"
   }
 }
