Scaffolded out testing framework and began to investigate how to test SQL.

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
       2,
       { "args": "after-used", "argsIgnorePattern": "^_" }
     ],
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/ no-var-requires": false
   }
 }
