--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "@config": ["src/config"],
       "@db": ["src/db"],
       "@graphql": ["src/db/graphql/schema"],
+      "@test": ["src/test"],
       "@types": ["src/types"]
     },
     "plugins": [{ "transform": "@zerollup/ts-transform-paths" }],
