--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "graphql": "^15.4.0",
     "graphql-iso-date": "^3.6.1",
     "join-monster": "^2.1.2",
+    "mysql": "^2.18.1",
     "pg-promise": "^10.7.1",
     "sqlstring": "^2.3.2",
     "ts-transformer-keys": "^0.4.2",
