--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "@db": ["src/db"],
       "@graphql": ["src/db/graphql/schema"],
       "@test": ["src/test"],
-      "@types": ["src/types"]
+      "@types": ["src/types"],
+      "@utils": ["src/utils"]
     },
     "plugins": [{ "transform": "@zerollup/ts-transform-paths" }],
     "outDir": "dist",
