--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ext": "ts, js"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.22",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/graphql": "^14.5.0",
@@ -33,6 +34,7 @@
     "@types/node": "^14.14.6",
     "@types/pg-promise": "^5.4.3",
     "@types/sqlstring": "^2.2.1",
+    "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "@zerollup/ts-transform-paths": "^1.7.18",
@@ -55,6 +57,7 @@
     "axios": "^0.21.0",
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
+    "dayjs": "^1.9.6",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "graphql-iso-date": "^3.6.1",
