--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "nodemon",
     "build": "tsc -p ./",
     "lint": "eslint . --ext .ts",
-    "test": "jest"
+    "test": "jest",
+    "db:reset": "ts-node ./src/bin/resetDb.ts",
+    "db:test_reset": "NODE_ENV=test ts-node ./src/bin/testResetDb.ts"
   },
   "nodemonConfig": {
     "ignore": [
@@ -58,6 +60,7 @@
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "dayjs": "^1.9.6",
+    "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "graphql-iso-date": "^3.6.1",
