--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "dev": "nodemon",
     "build": "tsc -p ./",
     "lint": "eslint . --ext .ts",
-    "test": "jest",
+    "test": "NODE_ENV=test jest",
     "db:reset": "ts-node ./src/bin/resetDb.ts",
-    "db:test_reset": "NODE_ENV=test ts-node ./src/bin/testResetDb.ts"
+    "db:test_reset": "ts-node ./src/bin/testResetDb.ts"
   },
   "nodemonConfig": {
     "ignore": [
@@ -28,47 +28,47 @@
     "ext": "ts, js"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.22",
+    "@types/cheerio": "^0.22.23",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.8",
+    "@types/express": "^4.17.9",
     "@types/graphql": "^14.5.0",
     "@types/graphql-iso-date": "^3.4.0",
-    "@types/node": "^14.14.6",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.20",
     "@types/pg-promise": "^5.4.3",
-    "@types/sqlstring": "^2.2.1",
-    "@types/xml2js": "^0.4.5",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
+    "@types/sqlstring": "^2.3.0",
+    "@types/xml2js": "^0.4.7",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
     "@zerollup/ts-transform-paths": "^1.7.18",
-    "apollo-server-types": "^0.6.1",
-    "eslint": "^7.12.1",
+    "apollo-server-types": "^0.6.2",
+    "eslint": "^7.17.0",
     "graphql-import-node": "0.0.4",
-    "graphql-tools": "^7.0.1",
-    "jest": "^26.6.1",
-    "nodemon": "^2.0.6",
-    "prettier": "^2.1.2",
-    "ts-jest": "^26.4.3",
-    "ts-node": "^9.0.0",
+    "graphql-tools": "^7.0.2",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-jest": "^0.0.1",
-    "typescript": "^4.0.5"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@types/jest": "^26.0.15",
-    "apollo-server-express": "^2.19.0",
-    "axios": "^0.21.0",
-    "cheerio": "^1.0.0-rc.3",
+    "apollo-server-express": "^2.19.1",
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.5",
     "cors": "^2.8.5",
-    "dayjs": "^1.9.6",
+    "dayjs": "^1.10.2",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "graphql-iso-date": "^3.6.1",
-    "join-monster": "^2.1.2",
+    "join-monster": "^3.0.1",
     "mysql": "^2.18.1",
-    "pg-promise": "^10.7.5",
+    "pg-promise": "^10.8.7",
     "sqlstring": "^2.3.2",
-    "ts-transformer-keys": "^0.4.2",
+    "ts-transformer-keys": "^0.4.3",
     "xml2js": "^0.4.23"
   }
 }
