--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
       { "args": "after-used", "argsIgnorePattern": "^_" }
     ],
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/ no-var-requires": false
+    "@typescript-eslint/ no-var-requires": 0,
+    "@typescript-eslint/no-explicit-any": 0
   }
 }
