--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "db:reset": "ts-node ./src/bin/resetDb.ts",
     "db:test_reset": "ts-node ./src/bin/testResetDb.ts",
     "push:dev": "yarn lint && yarn build && yarn test && git push origin dev",
-    "db:update_database": "NODE_ENV=dev ts-node ./src/bin/updateDb.ts"
+    "db:update_database": "NODE_ENV=dev ts-node -r tsconfig-paths/register --files ./src/bin/updateDb.ts"
   },
   "nodemonConfig": {
     "ignore": [
