--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "nodemon",
+    "start": "NODE_ENV=dev nodemon src/server.js",
     "build": "tsc -p ./",
     "lint": "eslint . --ext .ts",
     "test": "NODE_ENV=test jest --silent",
@@ -27,7 +27,7 @@
     "watch": [
       "src"
     ],
-    "exec": "node -r tsconfig-paths/register -r ts-node/register ./src/server.ts",
+    "exec": "node -r tsconfig-paths/register -r ts-node/register src/server.ts",
     "ext": "ts, js"
   },
   "devDependencies": {
@@ -39,7 +39,6 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.20",
     "@types/pg-promise": "^5.4.3",
-    "@types/sqlstring": "^2.3.0",
     "@types/xml2js": "^0.4.7",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
@@ -47,7 +46,6 @@
     "apollo-server-types": "^0.6.2",
     "eslint": "^7.17.0",
     "graphql-import-node": "0.0.4",
-    "graphql-tools": "^7.0.2",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
@@ -58,19 +56,19 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "apollo-server-express": "^2.19.1",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
     "cors": "^2.8.5",
     "dayjs": "^1.10.2",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
     "graphql-iso-date": "^3.6.1",
     "join-monster": "^3.0.1",
+    "join-monster-graphql-tools-adapter": "^0.1.0",
     "mysql": "^2.18.1",
     "pg-promise": "^10.8.7",
-    "sqlstring": "^2.3.2",
     "ts-transformer-keys": "^0.4.3",
     "xml2js": "^0.4.23"
   }
