Fixed failing tests.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "NODE_ENV=test jest --silent",
     "test:log": "NODE_ENV=test jest",
     "db:reset": "ts-node ./src/bin/resetDb.ts",
-    "db:test_reset": "ts-node ./src/bin/testResetDb.ts",
+    "db:test_reset": "NODE_ENV=test ts-node -r tsconfig-paths/register ./src/bin/testResetDb.ts",
     "push:dev": "yarn lint && yarn build && yarn test && git push origin dev",
     "db:update_database": "NODE_ENV=dev ts-node -r tsconfig-paths/register --files ./src/bin/updateDb.ts"
   },
