--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.23",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.9",
+    "@types/dotenv-flow": "^3.1.0",
+    "@types/express": "^4.17.11",
     "@types/graphql": "^14.5.0",
     "@types/graphql-iso-date": "^3.4.0",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.20",
+    "@types/node": "^14.14.21",
     "@types/pg-promise": "^5.4.3",
     "@types/xml2js": "^0.4.7",
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "@typescript-eslint/parser": "^4.12.0",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
     "@zerollup/ts-transform-paths": "^1.7.18",
-    "apollo-server-types": "^0.6.2",
-    "eslint": "^7.17.0",
+    "apollo-server-types": "^0.6.3",
+    "eslint": "^7.18.0",
     "graphql-import-node": "0.0.4",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
@@ -56,20 +56,18 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "aws-sdk": "^2.828.0",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
     "cors": "^2.8.5",
-    "dayjs": "^1.10.2",
+    "dayjs": "^1.10.3",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
     "graphql-iso-date": "^3.6.1",
     "join-monster": "^3.0.1",
-    "join-monster-graphql-tools-adapter": "^0.1.0",
-    "mysql": "^2.18.1",
-    "pg-promise": "^10.8.7",
-    "ts-transformer-keys": "^0.4.3",
+    "pg-promise": "^10.9.1",
     "xml2js": "^0.4.23"
   }
 }
