--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ext": "ts, js"
   },
   "devDependencies": {
+    "@aws-sdk/types": "^3.1.0",
     "@types/cheerio": "^0.22.23",
     "@types/dotenv-flow": "^3.1.0",
     "@types/express": "^4.17.11",
