--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "db:reset": "NODE_ENV=dev ts-node -r tsconfig-paths/register ./src/bin/resetDb.ts",
     "db:test_reset": "NODE_ENV=test ts-node -r tsconfig-paths/register ./src/bin/testResetDb.ts",
     "push:dev": "yarn lint && yarn build && yarn test && git push origin dev",
-    "db:update_database": "NODE_ENV=dev ts-node -r tsconfig-paths/register --files ./src/bin/updateDb.ts"
+    "db:update_database": "NODE_ENV=dev ts-node -r tsconfig-paths/register --files ./src/bin/updateDb.ts",
+    "serverless": "sls offline -r tsconfig-paths/register "
   },
   "nodemonConfig": {
     "ignore": [
@@ -50,6 +51,10 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "serverless-dotenv-plugin": "^3.1.0",
+    "serverless-offline": "^6.8.0",
+    "serverless-plugin-typescript": "^1.1.9",
+    "serverless-tscpaths": "^0.0.5",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
@@ -57,22 +62,19 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "apollo-server-lambda": "^2.19.2",
     "aws-sdk": "^2.828.0",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
     "cors": "^2.8.5",
     "dayjs": "^1.10.3",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
     "graphql-iso-date": "^3.6.1",
     "join-monster": "^3.0.1",
     "path": "^0.12.7",
     "pg-promise": "^10.9.1",
     "serverless-http": "^2.6.1",
-    "serverless-offline": "^6.8.0",
-    "serverless-plugin-typescript": "^1.1.9",
     "xml2js": "^0.4.23"
   }
 }
