--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.1.0",
+    "@types/body-parser": "^1.19.0",
     "@types/cheerio": "^0.22.23",
     "@types/dotenv-flow": "^3.1.0",
     "@types/express": "^4.17.11",
@@ -62,13 +63,15 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "apollo-server-lambda": "^2.19.2",
     "aws-sdk": "^2.828.0",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.5",
     "cors": "^2.8.5",
     "dayjs": "^1.10.3",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
     "graphql-iso-date": "^3.6.1",
     "join-monster": "^3.0.1",
