--- a/package.json
+++ b/package.json
@@ -7,17 +7,16 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=dev nodemon src/server.js",
     "build": "tsc -p ./",
     "lint": "eslint . --ext .ts",
-    "test": "NODE_ENV=test jest --silent",
-    "test:log": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test jest --silent --detectOpenHandles",
+    "test:log": "NODE_ENV=test jest --detectOpenHandles",
     "db:init": "NODE_ENV=dev ts-node -r tsconfig-paths/register ./src/bin/schemaReset.ts && NODE_ENV=dev ts-node -r tsconfig-paths/register --files ./src/bin/updateDb.ts",
-    "db:reset": "NODE_ENV=dev ts-node -r tsconfig-paths/register ./src/bin/resetDb.ts",
     "db:test_reset": "NODE_ENV=test ts-node -r tsconfig-paths/register ./src/bin/testResetDb.ts",
     "push:dev": "yarn lint && yarn build && yarn test && git push origin dev",
     "db:update_database": "NODE_ENV=dev ts-node -r tsconfig-paths/register --files ./src/bin/updateDb.ts",
-    "serverless": "sls offline -r tsconfig-paths/register "
+    "dev": "AWS_PROFILE=commons && sls offline --env dev",
+    "aws:db": "psql -h commons-app-database-dev.chgjlhdzehsr.ca-central-1.rds.amazonaws.com -p 5432 --username commons_admin -d postgres --pset expanded=auto;"
   },
   "nodemonConfig": {
     "ignore": [
@@ -46,11 +45,8 @@
     "@types/xml2js": "^0.4.7",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
-    "@zerollup/ts-transform-paths": "^1.7.18",
-    "apollo-server-types": "^0.6.3",
     "eslint": "^7.18.0",
     "jest": "^26.6.3",
-    "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "serverless-dotenv-plugin": "^3.1.0",
     "serverless-offline": "^6.8.0",
@@ -69,7 +65,7 @@
     "cheerio": "^1.0.0-rc.5",
     "cors": "^2.8.5",
     "dayjs": "^1.10.3",
-    "dotenv": "^8.2.0",
+    "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
