--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
       "@test": ["src/test"],
       "@utils": ["src/utils"]
     },
-    "outDir": ".build",
+    "outDir": "dist",
     "rootDir": "src",
     "removeComments": true,
     "strict": true,
