Updated handler func to remove req/res loggin.g

--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,7 @@ plugins:
 functions:
   graphql:
     handler: src/lambda.handler
+    timeout: 20
     events:
       - http:
           path: api
