--- a/serverless.yml
+++ b/serverless.yml
@@ -26,6 +26,11 @@ functions:
           path: api
           method: get
           cors: true
+  update-bills:
+    description: Example lambda function
+    handler: src/cron/update-bills.handler
+    events:
+      - schedule: rate(1 day)
 
 custom:
   tscpaths:
