--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "lint": "eslint . --ext .ts",
     "test": "NODE_ENV=test jest --silent --detectOpenHandles",
     "test:log": "NODE_ENV=test jest --detectOpenHandles",
-    "db:init": "NODE_ENV=dev ts-node -r tsconfig-paths/register ./src/bin/schemaReset.ts && NODE_ENV=dev ts-node -r tsconfig-paths/register --files ./src/bin/updateDb.ts",
-    "db:test_reset": "NODE_ENV=test ts-node -r tsconfig-paths/register ./src/bin/testResetDb.ts",
+    "test-create-parliament": "NODE_ENV=dev ts-node -r tsconfig-paths/register ./src/bin/create-parliaments.ts",
     "push:dev": "yarn lint && yarn build && yarn test && git push origin dev",
     "dev": "AWS_PROFILE=commons && sls offline --env dev",
     "deploy": "AWS_PROFILE=commons && sls deploy --env dev",
-    "dev:full": "AWS_PROFILE=commons && yarn lint && yarn build && yarn test && sls offline --env dev",
-    "aws:db": "psql -h commons-backend-dev-aurora.chgjlhdzehsr.ca-central-1.rds.amazonaws.com -p 5432 --username commons_admin -d postgres --pset expanded=auto;"
+    "dev:full": "AWS_PROFILE=commons && yarn lint && yarn build && yarn test && sls offline --env dev"
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.1.0",
@@ -54,13 +52,8 @@
     "cors": "^2.8.5",
     "dayjs": "^1.10.4",
     "dotenv-flow": "^3.2.0",
-    "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.4.0",
-    "graphql-iso-date": "^3.6.1",
-    "join-monster": "^3.0.1",
+    "mongoose": "^6.0.4",
     "path": "^0.12.7",
-    "pg-promise": "^10.9.1",
     "serverless-http": "^2.7.0",
     "xml2js": "^0.4.23"
   }
