--- a/package.json
+++ b/package.json
@@ -9,52 +9,34 @@
   "scripts": {
     "build": "tsc -p ./",
     "lint": "eslint . --ext .ts",
-    "test": "NODE_ENV=test jest --silent --detectOpenHandles",
-    "test:log": "NODE_ENV=test jest --detectOpenHandles",
-    "test-create-parliament": "NODE_ENV=dev ts-node -r tsconfig-paths/register ./src/bin/create-parliaments.ts",
-    "push:dev": "yarn lint && yarn build && yarn test && git push origin dev",
-    "dev": "AWS_PROFILE=commons && sls offline --env dev",
-    "deploy": "AWS_PROFILE=commons && sls deploy --env dev",
-    "dev:full": "AWS_PROFILE=commons && yarn lint && yarn build && yarn test && sls offline --env dev"
+    "test": "NODE_ENV=test && yarn build && jest",
+    "test:silent": "NODE_ENV=test && yarn build && jest --silent",
+    "run-script": "NODE_ENV=dev && yarn build && ts-node -r tsconfig-paths/register"
   },
   "devDependencies": {
-    "@aws-sdk/types": "^3.1.0",
-    "@types/body-parser": "^1.19.0",
-    "@types/cheerio": "^0.22.23",
-    "@types/dotenv-flow": "^3.1.0",
-    "@types/express": "^4.17.11",
-    "@types/graphql": "^14.5.0",
-    "@types/graphql-iso-date": "^3.4.0",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.22",
-    "@types/pg-promise": "^5.4.3",
-    "@types/xml2js": "^0.4.8",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
+    "@aws-sdk/types": "^3.29.0",
+    "@types/cheerio": "^0.22.30",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.10",
+    "@types/xml2js": "^0.4.9",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.18.0",
-    "jest": "^26.6.3",
-    "prettier": "^2.2.1",
-    "serverless-dotenv-plugin": "^3.1.0",
-    "serverless-offline": "^6.8.0",
-    "serverless-plugin-typescript": "^1.1.9",
-    "serverless-tscpaths": "^0.0.5",
-    "ts-jest": "^26.4.4",
-    "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
+    "jest": "^27.1.0",
+    "prettier": "^2.3.2",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
+    "tsconfig-paths": "^3.11.0",
     "tsconfig-paths-jest": "^0.0.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.4.2",
+    "yarn-upgrade-all": "^0.5.4"
   },
   "dependencies": {
-    "aws-sdk": "^2.831.0",
-    "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
-    "cheerio": "^1.0.0-rc.5",
-    "cors": "^2.8.5",
-    "dayjs": "^1.10.4",
-    "dotenv-flow": "^3.2.0",
+    "aws-sdk": "^2.983.0",
+    "axios": "^0.21.3",
+    "cheerio": "^1.0.0-rc.10",
+    "dayjs": "^1.10.6",
     "mongoose": "^6.0.4",
-    "path": "^0.12.7",
-    "serverless-http": "^2.7.0",
     "xml2js": "^0.4.23"
   }
 }
