--- a/serverless.yml
+++ b/serverless.yml
@@ -1,14 +1,13 @@
 service: commons-api
 
 package:
-  exclude:
-    - ./**
-  include:
-    - dist/**
-    - node_modules/**
+  excludeDevDependencies: false
+  individually: true
 
 plugins:
   - serverless-appsync-plugin
+  - serverless-plugin-common-excludes
+  - serverless-plugin-include-dependencies
 
 provider:
   name: aws
@@ -104,7 +103,24 @@ resources:
               Action: sts:AssumeRole
 
 functions:
-  clientLambda:
+  client-lambda:
     handler: dist/lambdas/client.handler
     name: commons-client-lambda-${self:custom.stage}
     description: Provides data to the client apps
+
+  schedule-jobs:
+    handler: dist/lambdas/schedule-jobs.handler
+    name: commons-scheduled-jobs-${self:custom.stage}
+    description: Performs scheduled CRON jobs
+    events:
+      - schedule:
+          name: fetch-bills-cron-job-${self:custom.stage}
+          description: Fetches events from LEGISinfo server and creates Bills and Events in the database. Runs every 24 hours at 8AM Ottawa time (12PM UTC)
+          rate: cron(0 12 * * ? *)
+          input:
+            eventSource: aws:cloudWatchEvent
+            header:
+              eventType:
+                entityType: Bills
+                type: UpdateBills
+              environment: ${self:custom.stage}
