--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "commons-api-v2",
   "version": "1.0.0",
-  "main": "server.ts",
   "repository": "git@github.com:Commoddity/commons-api-v2.git",
-  "author": "pascalvl <pascal@coinmiles.io>",
+  "author": "commons-app <canada.commons.app@gmail.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
     "build": "tsc -p ./",
     "build:clean": "tsc --build --clean",
     "deploy": "serverless deploy",
+    "validate": "serverless validate-schema",
     "lint": "eslint . --ext .ts",
     "set:dev": "export NODE_ENV=dev && export branch=dev;",
     "test": "yarn && yarn build && yarn set:dev && jest",
@@ -17,33 +17,32 @@
     "run:dev": "yarn && yarn build && yarn set:dev ts-node",
     "deploy:dev": "yarn && yarn build:clean && yarn build && yarn set:dev && yarn deploy --stage dev"
   },
+  "dependencies": {
+    "axios": "^0.21.4",
+    "cheerio": "^1.0.0-rc.10",
+    "dayjs": "^1.10.7",
+    "mongoose": "^6.0.5",
+    "serverless": "^2.57.0",
+    "serverless-appsync-plugin": "^1.12.0",
+    "xml2js": "^0.4.23"
+  },
   "devDependencies": {
     "@aws-sdk/types": "^3.29.0",
     "@types/cheerio": "^0.22.30",
     "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.10",
+    "@types/node": "^16.9.1",
     "@types/xml2js": "^0.4.9",
-    "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "@typescript-eslint/parser": "^4.30.0",
-    "aws-sdk": "^2.983.0",
-    "eslint": "^7.18.0",
-    "jest": "^27.1.0",
-    "prettier": "^2.3.2",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
+    "aws-sdk": "^2.987.0",
+    "eslint": "^7.32.0",
+    "jest": "^27.1.1",
+    "prettier": "^2.4.0",
     "serverless-plugin-common-excludes": "^4.0.0",
     "serverless-plugin-include-dependencies": "^5.0.0",
     "ts-jest": "^27.0.5",
-    "ts-loader": "^9.2.5",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.2",
+    "typescript": "^4.4.3",
     "yarn-upgrade-all": "^0.5.4"
-  },
-  "dependencies": {
-    "axios": "^0.21.3",
-    "cheerio": "^1.0.0-rc.10",
-    "dayjs": "^1.10.6",
-    "mongoose": "^6.0.4",
-    "serverless": "^2.57.0",
-    "serverless-appsync-plugin": "^1.12.0",
-    "xml2js": "^0.4.23"
   }
 }
