Set up admin API and config for updating Bill categories.

--- a/graphql/admin/resources/mutations.yml
+++ b/graphql/admin/resources/mutations.yml
@@ -1,8 +1,4 @@
 - dataSource: AdminLambda
   type: Mutation
-  field: addBillCategory
-  response: false
-- dataSource: AdminLambda
-  type: Mutation
-  field: removeBillCategory
+  field: updateBillCategories
   response: false
