--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "update:main": "git checkout main; git merge dev; git push origin main",
     "build": "tsc -p ./",
     "build:clean": "tsc --build --clean",
     "deploy": "serverless deploy",
