--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "update:main": "git checkout main; git merge dev; git push origin main",
+    "update:main": "git add .; git commit -m \"Updating main\"; git checkout main; git merge dev; git push origin main; git checkout dev;",
     "build": "tsc -p ./",
     "build:clean": "tsc --build --clean",
     "deploy": "serverless deploy",
