Setup user authentication and creation flow, as well as user pool auth for client app.

--- a/graphql/admin/resources/data-sources.yml
+++ b/graphql/admin/resources/data-sources.yml
@@ -2,4 +2,4 @@
   name: AdminLambda
   config:
     lambdaFunctionArn: arn:aws:lambda:ca-central-1:430902637264:function:commons-admin-lambda-${self:custom.stage}
-    serviceRoleArn: arn:aws:iam::430902637264:role/commons-api-${self:custom.stage}-ca-central-1-lambdaRole
+    serviceRoleArn: arn:aws:iam::430902637264:role/commons-api-lambdaRole-${self:custom.stage}
