--- a/serverless.yml
+++ b/serverless.yml
@@ -29,6 +29,7 @@ provider:
   lambdaHashingVersion: 20201221
   iam:
     role:
+      name: commons-api-lambdaRole-${self:custom.stage}
       statements:
         - Effect: "Allow"
           Action:
@@ -71,6 +72,10 @@ custom:
     - name: commons-client-api-${self:custom.stage}
       authenticationType: API_KEY
       schema: graphql/client/schema.graphql
+      additionalAuthenticationProviders:
+        - authenticationType: AMAZON_COGNITO_USER_POOLS
+          userPoolConfig:
+            userPoolId: ca-central-1_44U7Ugh9q
 
       apiKeys:
         - name: commons-client-api-key-${self:custom.stage}
@@ -83,6 +88,7 @@ custom:
         - ${file(graphql/client/resources/mutations.yml)}
       dataSources:
         - ${file(graphql/client/resources/data-sources.yml)}
+
     - name: commons-admin-api-${self:custom.stage}
       authenticationType: API_KEY
       schema: graphql/admin/schema.graphql
@@ -101,6 +107,57 @@ custom:
 
 resources:
   Resources:
+    cognitoHandlerRole:
+      Type: AWS::IAM::Role
+      Properties:
+        RoleName: commons-api-cognitoHandlerRole-${self:custom.stage}
+        AssumeRolePolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Principal:
+                Service:
+                  - lambda.amazonaws.com
+              Action: sts:AssumeRole
+        Policies:
+          - PolicyName: cognitoHandlerPolicy
+            PolicyDocument:
+              Version: "2012-10-17"
+              Statement:
+                - Effect: "Allow"
+                  Action:
+                    - cognito-idp:AdminUpdateUserAttributes
+                  Resource:
+                    - "Fn::Join":
+                        - ":"
+                        - - "arn:aws:cognito-idp"
+                          - Ref: "AWS::Region"
+                          - Ref: "AWS::AccountId"
+                          - userpool/*
+                - Effect: "Allow"
+                  Action:
+                    - "logs:CreateLogGroup"
+                    - "logs:CreateLogStream"
+                    - "logs:PutLogEvents"
+                    - "ec2:CreateNetworkInterface"
+                    - "ec2:DescribeNetworkInterfaces"
+                    - "ec2:DeleteNetworkInterface"
+                  Resource:
+                    - "*"
+                - Effect: "Allow"
+                  Action:
+                    - "ssm:GetParameter"
+                    - "ssm:GetParameters"
+                    - "ssm:GetParametersByPath"
+                    - "ssm:DescribeParameters"
+                    - "ssm:PutParameter"
+                  Resource:
+                    - "Fn::Join":
+                        - ":"
+                        - - "arn:aws:ssm"
+                          - Ref: "AWS::Region"
+                          - Ref: "AWS::AccountId"
+                          - "*"
     IamRoleLambdaExecution:
       Type: AWS::IAM::Role
       Properties:
@@ -135,6 +192,7 @@ functions:
     handler: dist/lambdas/cognito.handler
     name: commons-cognito-lambda-${self:custom.stage}
     description: Handles user sign ups via Cognito
+    role: cognitoHandlerRole
 
   schedule-jobs:
     handler: dist/lambdas/schedule-jobs.handler
