Set up and deployed MP fetching functionality using MapBox and pushed to AWS.

--- a/graphql/client/resources/queries.yml
+++ b/graphql/client/resources/queries.yml
@@ -15,6 +15,10 @@
   type: Query
   field: getOneUser
   response: false
+- dataSource: ClientLambda
+  type: Query
+  field: fetchMpInfo
+  response: false
 
 # Field Level Resolvers
 - dataSource: ClientLambda
