--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "deploy:dev": "yarn && yarn build:clean && yarn build && yarn set:dev && yarn deploy --stage dev"
   },
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.13.2",
     "axios": "^0.21.4",
     "cheerio": "^1.0.0-rc.10",
     "dayjs": "^1.10.7",
@@ -32,6 +33,7 @@
     "@aws-sdk/types": "^3.29.0",
     "@types/cheerio": "^0.22.30",
     "@types/jest": "^27.0.1",
+    "@types/mapbox__mapbox-sdk": "^0.13.2",
     "@types/node": "^16.9.1",
     "@types/xml2js": "^0.4.9",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
