--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,11 @@
   "rules": {
     "@typescript-eslint/no-unused-vars": [
       2,
-      { "args": "after-used", "argsIgnorePattern": "^_" }
+      {
+        "args": "after-used",
+        "argsIgnorePattern": "^_",
+        "ignoreRestSiblings": true
+      }
     ],
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
