--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   },
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.13.2",
+    "article-parser": "^4.2.10",
     "axios": "^0.21.4",
     "cheerio": "^1.0.0-rc.10",
     "dayjs": "^1.10.7",
     "mongoose": "^6.0.5",
     "serverless": "^2.57.0",
     "serverless-appsync-plugin": "^1.12.0",
+    "striptags": "^3.2.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
