--- a/graphql/admin/resources/mutations.yml
+++ b/graphql/admin/resources/mutations.yml
@@ -2,3 +2,7 @@
   type: Mutation
   field: updateBillCategories
   response: false
+- dataSource: AdminLambda
+  type: Mutation
+  field: addMediaSourceToBill
+  response: false
