--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "update:main": "git add .; git commit -m \"Updating main\"; git checkout main; git merge dev; git push origin main; git checkout dev;",
     "build": "tsc -p ./",
     "build:clean": "tsc --build --clean",
+    "graphql:codegen": "graphql-codegen --config codegen.yml",
     "deploy": "serverless deploy",
     "validate": "serverless validate-schema",
     "playground": "serverless graphql-playground",
@@ -33,6 +34,9 @@
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.29.0",
+    "@graphql-codegen/cli": "^2.2.1",
+    "@graphql-codegen/typescript": "^2.2.4",
+    "@graphql-codegen/typescript-operations": "^2.1.8",
     "@types/cheerio": "^0.22.30",
     "@types/jest": "^27.0.1",
     "@types/mapbox__mapbox-sdk": "^0.13.2",
@@ -42,6 +46,7 @@
     "@typescript-eslint/parser": "^4.31.0",
     "aws-sdk": "^2.987.0",
     "eslint": "^7.32.0",
+    "graphql": "^15.5.1",
     "jest": "^27.1.1",
     "prettier": "^2.4.0",
     "serverless-plugin-common-excludes": "^4.0.0",
