Fixed cron job.

--- a/graphql/admin/codegen.yml
+++ b/graphql/admin/codegen.yml
@@ -1,7 +1,7 @@
 overwrite: true
-schema: "./graphql/client/schema.graphql"
+schema: "./graphql/admin/schema.graphql"
 generates:
-  ./src/types/schema-types.ts:
+  ../../src/types/schema-types.ts:
     plugins:
       - typescript
       - typescript-operations
