--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "commons-api-v2",
+  "name": "commons-api",
   "version": "1.0.0",
   "repository": "git@github.com:Commoddity/commons-api-v2.git",
   "author": "commons-app <canada.commons.app@gmail.com>",
@@ -9,7 +9,8 @@
     "update:main": "git add .; git commit -m \"Updating main\"; git checkout main; git merge dev; git push origin main; git checkout dev;",
     "build": "tsc -p ./",
     "build:clean": "tsc --build --clean",
-    "graphql:codegen": "graphql-codegen --config codegen.yml",
+    "codegen:admin": "graphql-codegen --config ./graphql/admin/codegen.yml",
+    "codegen:client": "graphql-codegen --config ./graphql/client/codegen.yml",
     "deploy": "serverless deploy",
     "validate": "serverless validate-schema",
     "playground": "serverless graphql-playground",
@@ -21,6 +22,7 @@
     "deploy:dev": "yarn && yarn build:clean && yarn build && yarn set:dev && yarn deploy --stage dev"
   },
   "dependencies": {
+    "@graphql-codegen/typescript-react-apollo": "^3.2.2",
     "@mapbox/mapbox-sdk": "^0.13.2",
     "article-parser": "^4.2.10",
     "axios": "^0.21.4",
