Moved bill added fields to query instead of field level resolver.

--- a/graphql/client/resources/queries.yml
+++ b/graphql/client/resources/queries.yml
@@ -15,9 +15,8 @@
   type: Query
   field: fetchMpInfo
   response: false
-
 # Field Level Resolvers
-- dataSource: ClientLambda
-  type: IBill
-  field: billAddedFields
-  response: false
+# - dataSource: ClientLambda
+#   type: IBill
+#   field: billAddedFields
+#   response: false
